* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -8,7 +8,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2003-06-20.
+2003-06-28.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -21,8 +21,10 @@ differences are currently required.</p>
 <tr> <td>gnu.java.awt.image.GdkPixbufDecoder</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>gnu.java.awt.image.GtkOffScreenDecoder</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>gnu.java.awt.peer.gtk.GtkToolkit</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkToolkit.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.locale.LocaleInformation_de</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.locale.LocaleInformation_de.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.locale.LocaleInformation_en</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.locale.LocaleInformation_en.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.locale.LocaleInformation_nl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.locale.LocaleInformation_nl.diff">Diff</a></td> </tr>
 <tr> <td>gnu.java.nio.FileChannelImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.nio.FileChannelImpl.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.nio.MappedByteFileBuffer</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
 <tr> <td>gnu.java.nio.SelectorImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.nio.SelectorImpl.diff">Diff</a></td> </tr>
 <tr> <td>gnu.javax.swing.plaf.gtk.GtkBorders</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>gnu.javax.swing.plaf.gtk.GtkCheckBoxUI</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
@@ -35,7 +37,6 @@ differences are currently required.</p>
 <tr> <td>java.io.File</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.File.diff">Diff</a></td> </tr>
 <tr> <td>java.io.FileDescriptor</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.io.InputStreamReader</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.InputStreamReader.diff">Diff</a></td> </tr>
-<tr> <td>java.io.LineNumberReader</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.LineNumberReader.diff">Diff</a></td> </tr>
 <tr> <td>java.io.ObjectInputStream</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.ObjectInputStream.diff">Diff</a></td> </tr>
 <tr> <td>java.io.OutputStreamWriter</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.OutputStreamWriter.diff">Diff</a></td> </tr>
 <tr> <td>java.io.VMObjectStreamClass</td> <td>Yes</td> <td>VM-specific</td> <td>&nbsp;</td> </tr>
@@ -69,45 +70,19 @@ differences are currently required.</p>
 <tr> <td>java.net.MimeTypeMapper</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.net.PlainDatagramSocketImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.PlainDatagramSocketImpl.diff">Diff</a></td> </tr>
 <tr> <td>java.net.PlainSocketImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.PlainSocketImpl.diff">Diff</a></td> </tr>
-<tr> <td>java.net.SocketInputStream</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.net.SocketOutputStream</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
+<tr> <td>java.net.ServerSocket</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.ServerSocket.diff">Diff</a></td> </tr>
+<tr> <td>java.net.Socket</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.Socket.diff">Diff</a></td> </tr>
 <tr> <td>java.net.URL</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.URL.diff">Diff</a></td> </tr>
 <tr> <td>java.net.URLConnection</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.URLConnection.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.Buffer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.Buffer.diff">Diff</a></td> </tr>
 <tr> <td>java.nio.DirectByteBufferImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.DirectByteBufferImpl.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.MappedByteFileBuffer</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.nio.MappedCharFileBuffer</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.nio.MappedDoubleFileBuffer</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.nio.MappedFloatFileBuffer</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.nio.MappedIntFileBuffer</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.nio.MappedLongFileBuffer</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.nio.MappedShortFileBuffer</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
+<tr> <td>java.nio.MappedByteBufferImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.MappedByteBufferImpl.diff">Diff</a></td> </tr>
 <tr> <td>java.nio.channels.FileChannel</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.FileChannel.diff">Diff</a></td> </tr>
 <tr> <td>java.text.CollationElementIterator</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.text.CollationElementIterator.diff">Diff</a></td> </tr>
 <tr> <td>java.text.CollationKey</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.text.CollationKey.diff">Diff</a></td> </tr>
 <tr> <td>java.text.Collator</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.text.Collator.diff">Diff</a></td> </tr>
-<tr> <td>java.text.DateFormat</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.text.DateFormat.diff">Diff</a></td> </tr>
 <tr> <td>java.text.RuleBasedCollator</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.text.RuleBasedCollator.diff">Diff</a></td> </tr>
-<tr> <td>java.text.SimpleDateFormat</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.text.SimpleDateFormat.diff">Diff</a></td> </tr>
-<tr> <td>java.util.Locale</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.util.Locale.diff">Diff</a></td> </tr>
 <tr> <td>java.util.ResourceBundle</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.util.ResourceBundle.diff">Diff</a></td> </tr>
-<tr> <td>java.util.SimpleTimeZone</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.util.SimpleTimeZone.diff">Diff</a></td> </tr>
-<tr> <td>java.util.logging.ConsoleHandler</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.util.logging.ErrorManager</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.util.logging.FileHandler</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.util.logging.Filter</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.util.logging.Formatter</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.util.logging.Handler</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.util.logging.Level</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.util.logging.LogManager</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.util.logging.LogRecord</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.util.logging.Logger</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.util.logging.LoggingPermission</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.util.logging.MemoryHandler</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.util.logging.SimpleFormatter</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.util.logging.SocketHandler</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.util.logging.StreamHandler</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.util.logging.XMLFormatter</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
+<tr> <td>java.util.Timer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.util.Timer.diff">Diff</a></td> </tr>
 <tr> <td>java.util.zip.Deflater</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.util.zip.Deflater.diff">Diff</a></td> </tr>
 <tr> <td>java.util.zip.DeflaterConstants</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.util.zip.DeflaterEngine</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
@@ -127,8 +102,6 @@ differences are currently required.</p>
 <tr> <td>javax.rmi.CORBA.ObjectImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>javax.rmi.CORBA.SystemException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>javax.rmi.ORB</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>javax.swing.SpinnerModel</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>javax.swing.plaf.basic.BasicBorders</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.plaf.basic.BasicBorders.diff">Diff</a></td> </tr>
 <tr> <td>javax.xml.parsers.ClassStuff</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>javax.xml.parsers.DocumentBuilder</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>javax.xml.parsers.DocumentBuilderFactory</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
