--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -14,6 +14,23 @@ home page</a>.</p>
 
 <!-- ATTENTION: This page is for *OLD* news!  Latest news goes first. -->
 
+<dt><b>January 22, 2003</b></dt>
+<dd>
+The GCC Steering Committee has named Gabriel Dos Reis as release manager for
+the upcoming GCC 3.2.2 release, allowing Mark Mitchell to focus his
+efforts on the GCC 3.3 and 3.4 releases.  3.2.2 is intended to be a bug
+fix release only.
+</dd>
+
+<dt><b>January 10, 2003</b></dt>
+<dd>
+Geoffrey Keating of Apple Computer, Inc., with support from Red Hat,
+Inc., has contributed a
+<a href="http://gcc.gnu.org/onlinedocs/gcc/Precompiled-Headers.html#Precompiled%20Headers">
+precompiled header</a> implementation that can dramatically speed up
+compilation of some projects.
+</dd>
+
 <dt><b>December 27, 2002</b></dt>
 <dd>
 Mark Mitchell of CodeSourcery has contributed a
