Add a "Weekly release status:" item to the main page.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -67,6 +67,13 @@ to maintain and improve quality.</p>
   open for all maintainers.
 </dd>
 
+<!-- This is a fifth, permanent item. -->
+
+<dt><strong>Weekly release status:</strong>
+  <a href="http://gcc.gnu.org/ml/gcc/2003-06/msg02335.html">2003-06-27</a>
+</dt><dd>
+</dd>
+
 </dl>
 
 <hr />
