Remove broken M-CORE link, and adjust ISO C++ Committee homepage.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -167,7 +167,6 @@ names.
  
  <li>mcore
   <br />Manufacturer: Motorola
-  <br /><a href="http://www.motorola.com/SPS/MCORE/">M-CORE home page</a>
   <br />GDB includes a simulator.
  </li>
  
@@ -338,7 +337,7 @@ names.
 <h3>C++ information</h3>
 
 <ul>
-  <li><a href="http://www.dkuug.dk/jtc1/sc22/wg21/">ISO Committee homepage
+  <li><a href="http://std.dkuug.dk/jtc1/sc22/wg21/">ISO Committee homepage
       (defects list, etc)</a></li>
   <li><a href="http://www.comeaucomputing.com/iso/">Comeau reflector</a></li>
 </ul>
