Add two bootstrap entries for 3.3:
  alphaev67-dec-osf5.1 (Tru64 5.1b)
  i586-pc-linux-gnu (Red Hat 7.3, glibc 2.2.5, kernel 2.4.20)

--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -71,6 +71,14 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>alphaev67-dec-osf5.1</td>
+<td>Tru64 5.1b</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-06/msg01504.html">3.3</a>
+</td>
+</tr>
+
+<tr>
 <td>arm-unknown-linux-gnu</td>
 <td>Debian</td>
 <td>Test results:
@@ -166,6 +174,14 @@ Installing GCC: Final Installation</a>.</p>
 <td>NetBSD 1.6.1, GNU make</td>
 <td>Bootstrap:
 <a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01736.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i586-pc-linux-gnu</td>
+<td>Red Hat 7.3, glibc 2.2.5, kernel 2.4.20</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-06/msg02459.html">3.3</a>
 </td>
 </tr>
 
