I'm no longer employed by Vienna University of Technology.

--- a/htdocs/steering.html
+++ b/htdocs/steering.html
@@ -37,7 +37,7 @@ reach them is the gcc <a href="lists.html">mailinglist</a>.</p>
 <li>David Miller (Red Hat)</li>
 <li>Mark Mitchell (CodeSourcery)</li>
 <li>Toon Moene (Koninklijk Nederlands Meteorologisch Instituut)</li>
-<li>Gerald Pfeifer (Vienna University of Technology)</li>
+<li>Gerald Pfeifer</li>
 <li>Joel Sherrill (OAR Corporation)</li>
 <li>Jim Wilson</li>
 </ul>
