Updated links for z/Architecture Principles of Operation.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -264,7 +264,9 @@ names.
 
  <li>z/Architecture (S/390)
   <br />Manufacturer: IBM
-  <br /><a href="http://www-1.ibm.com/servers/s390/os390/bkserv/latest/z_arch.html">z/Architecture Principles of Operation</a></li>
+  <br /><a href="http://publibfp.boulder.ibm.com/cgi-bin/bookmgr/BOOKS/dz9ar008">ESA/390 Principles of Operation</a>
+  <br /><a href="http://publibfp.boulder.ibm.com/cgi-bin/bookmgr/BOOKS/dz9zr002">z/Architecture Principles of Operation</a>
+ </li>
 
 </ul>
 
