Add "lowercase" and "uppercase" to the spelling conventions.

--- a/htdocs/codingconventions.html
+++ b/htdocs/codingconventions.html
@@ -244,6 +244,11 @@ and code.  The following table lists some simple cases:</p>
     <td></td>
   </tr>
   <tr>
+    <td>"lowercase"</td>
+    <td>"lower case" or "lower-case"</td>
+    <td></td>
+  </tr>
+  <tr>
     <td>"H8S"</td>
     <td>"H8/S"</td>
     <td></td>
@@ -273,6 +278,11 @@ and code.  The following table lists some simple cases:</p>
   <tr>
     <td>"testcase", "testsuite"</td>
     <td>"test-case" or "test case", "test-suite" or "test suite"</td>
+  </tr>
+  <tr>
+    <td>"uppercase"</td>
+    <td>"upper case" or "upper-case"</td>
+    <td></td>
   </tr>
   <tr>
     <td>"VAX", "VAXen", "MicroVAX"</td>
