Add bootstrap entries for 3.3:
  alpha-dec-osf4.0f
  powerpc-apple-darwin5.5 (Mac OS 10.1.5)

--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -23,6 +23,14 @@ Installing GCC: Final Installation</a>.</p>
 <table>
 
 <tr>
+<td>alpha-dec-osf4.0f</td>
+<td>&nbsp;</td>
+<td>Bootstrap (C, C++, F77, Obj-C, Java, Ada; with tweaks):
+<a href="http://gcc.gnu.org/ml/gcc/2003-07/msg00014.html">3.3</a>
+</td>
+</tr>
+
+<tr>
 <td>alpha-unknown-freebsd5.1</td>
 <td>GNU make, build in objdir</td>
 <td>Test results:
@@ -407,6 +415,14 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01184.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>powerpc-apple-darwin5.5</td>
+<td>Mac OS 10.1.5</td>
+<td>Bootstrap (C, F77):
+<a href="http://gcc.gnu.org/ml/gcc/2003-07/msg00027.html">3.3</a>
 </td>
 </tr>
 
