Update Bugzilla link.

--- a/htdocs/projects/index.html
+++ b/htdocs/projects/index.html
@@ -79,7 +79,7 @@ exclusive.</a></li>
 <h1>GCC Projects</h1>
 
 <h2><a name="fix_bugs_in_bts">Fix bugs in our bug tracking system</a></h2>
-<p>You can investigate bugs in our <a href="../bugzilla.html">bug
+<p>You can investigate bugs in our <a href="http://gcc.gnu.org/bugzilla/">bug
 tracking system</a> and attempt to fix them or see whether they still are
 present in current GCC.</p>
 
