Update release status.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -69,8 +69,8 @@ to maintain and improve quality.</p>
 
 <!-- This is a fifth, permanent item. -->
 
-<dt><strong>Weekly release status:</strong>
-  <a href="http://gcc.gnu.org/ml/gcc/2003-06/msg02335.html">2003-06-27</a>
+<dt><strong>Release status:</strong>
+  <a href="http://gcc.gnu.org/ml/gcc/2003-07/msg00268.html">2003-07-04</a>
 </dt><dd>
 </dd>
 
