--- a/htdocs/projects/tree-ssa/index.html
+++ b/htdocs/projects/tree-ssa/index.html
@@ -374,7 +374,7 @@ different passes are welcome.</p>
 <dl>
 <dt><em>Normalization of array access functions</em></dt>
 <dd>This pass should gather the information decomposed by
-    gimplicication into well formed access functions.  A further
+    gimplification into well formed access functions.  A further
     simplification should simplify these functions in order to get
     functions of loop indices.  This form is needed in dependence
     tests.  The implementation of this normalization is very similar
