Replace sparc-sun-solaris2.7 by sparc-sun-solaris2.8.  Minor reformatting.

--- a/htdocs/gcc-3.3/criteria.html
+++ b/htdocs/gcc-3.3/criteria.html
@@ -76,7 +76,10 @@ possible, the release will support other targets as well.</p>
                       <td>hppa2.0w-hp-hpux11.00</td>
     <td><a href="mailto:dave@hiauly1.hia.nrc.ca">John David Anglin</a></td>
 </tr>
-<tr><td>Intel x86</td><td>Debian GNU/Linux 2.2</td><td>i386-pc-linux-gnu</td><td>&nbsp;</td></tr>
+<tr><td>Intel x86</td><td>Debian GNU/Linux 2.2</td>
+                      <td>i386-pc-linux-gnu</td>
+    <td>&nbsp;</td>
+</tr>
 <tr><td>Intel x86</td><td>RedHat Linux 6.2</td>    <td>i686-pc-linux-gnu</td><td>&nbsp;</td></tr>
 <tr><td>Intel x86</td><td>FreeBSD -STABLE/-CURRENT</td>
                       <td>i386-unknown-freebsd</td>
@@ -87,7 +90,10 @@ possible, the release will support other targets as well.</p>
                       <td>powerpc-ibm-aix4.3.3.0</td>
     <td><a href="mailto:dje@watson.ibm.com">David Edelsohn</a></td>
 </tr>
-<tr><td>SPARC</td>    <td>Solaris 2.7</td>         <td>sparc-sun-solaris2.7</td><td>&nbsp;</td></tr>
+<tr><td>SPARC</td>    <td>Solaris 2.8</td>
+                      <td>sparc-sun-solaris2.8</td>
+    <td>&nbsp;</td>
+</tr>
 </table>
 
 <p>GCC's performance on the following platforms will not be required
