Add description of objc-improvements-branch.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -221,6 +221,13 @@ particular releases or snapshots or the latest snapshot.  </p>
   3.3.  See <a href="http://gcc.gnu.org/ml/gcc/2003-04/msg00733.html"
   >this message</a> for details.</dd>
 
+  <dt>objc-improvements-branch</dt>
+  <dd>This branch is being used to merge Objective-C bug fixes and enhancements
+  from Apple Computer into the FSF tree.  It will also be used in the future
+  to bring Objective-C++ from Apple to the FSF.  The message thread starting
+  <a href="http://gcc.gnu.org/ml/gcc/2003-07/msg00535.html">here</a> describes this
+  at more length.</dd>
+
 </dl>
 
 <h3><a name="olddevbranches">Inactive Development Branches</a></h3>
