--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -8,7 +8,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2003-07-09.
+2003-07-10.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -20,12 +20,35 @@ differences are currently required.</p>
 <tr><th>Class</th> <th>libgcj</th> <th>Classpath</th> <th>Merge Status</th> </tr>
 <tr> <td>gnu.java.awt.image.GdkPixbufDecoder</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>gnu.java.awt.image.GtkOffScreenDecoder</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>gnu.java.awt.peer.gtk.GtkComponentPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkComponentPeer.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.awt.peer.gtk.GtkContainerPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkContainerPeer.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.awt.peer.gtk.GtkDialogPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkDialogPeer.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GdkFontMetrics</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GdkFontMetrics.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GdkGraphics</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GdkGraphics.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GtkButtonPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkButtonPeer.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GtkCanvasPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkCanvasPeer.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GtkCheckboxGroupPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkCheckboxGroupPeer.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GtkCheckboxMenuItemPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkCheckboxMenuItemPeer.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GtkCheckboxPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkCheckboxPeer.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GtkChoicePeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkChoicePeer.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GtkClipboard</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkClipboard.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GtkFileDialogPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkFileDialogPeer.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GtkFramePeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkFramePeer.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GtkGenericPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkGenericPeer.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GtkImage</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkImage.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GtkImagePainter</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkImagePainter.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GtkLabelPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkLabelPeer.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GtkListPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkListPeer.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GtkMenuBarPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkMenuBarPeer.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GtkMenuComponentPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkMenuComponentPeer.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GtkMenuItemPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkMenuItemPeer.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GtkMenuPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkMenuPeer.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GtkOffScreenImage</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkOffScreenImage.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GtkPanelPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkPanelPeer.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GtkPopupMenuPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkPopupMenuPeer.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GtkScrollPanePeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkScrollPanePeer.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GtkScrollbarPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkScrollbarPeer.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GtkTextAreaPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkTextAreaPeer.diff">Diff</a></td> </tr>
 <tr> <td>gnu.java.awt.peer.gtk.GtkTextComponentPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkTextComponentPeer.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GtkTextFieldPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkTextFieldPeer.diff">Diff</a></td> </tr>
 <tr> <td>gnu.java.awt.peer.gtk.GtkToolkit</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkToolkit.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.awt.peer.gtk.GtkWindowPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkWindowPeer.diff">Diff</a></td> </tr>
 <tr> <td>gnu.java.locale.LocaleInformation_de</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.locale.LocaleInformation_de.diff">Diff</a></td> </tr>
 <tr> <td>gnu.java.locale.LocaleInformation_en</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.locale.LocaleInformation_en.diff">Diff</a></td> </tr>
 <tr> <td>gnu.java.locale.LocaleInformation_nl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.locale.LocaleInformation_nl.diff">Diff</a></td> </tr>
