Add a reference to cvs.html#devbranches to the instructions for creating a new branch.

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -400,7 +400,9 @@ done
 <h2><a name="branches">Creating branches</a></h2>
 
 <p>When creating a branch for development, you should first tag the
-branchpoint.</p>
+branchpoint. Also, please document such branches at
+<a href="cvs.html#devbranches">cvs.html#devbranches</a>.
+</p>
 
 </body>
 </html>
