* contrib.html: Add a reference to the main contribute.html page 	and remove a redundant section on copyright assignment.

--- a/htdocs/java/contrib.html
+++ b/htdocs/java/contrib.html
@@ -8,6 +8,10 @@
 
 <h1>Contributing to the GCJ Project</h1>
 
+<p>The <a href="../contribute.html">main GCC contribute page</a> contains
+general information; below you will find GCJ-specific details.</p>
+
+
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
  <th align="left">
@@ -52,21 +56,6 @@ projects</a>.</p>
     method header </li>
   </ul>
 
-<table border="0" cellpadding="4" width="95%">
-<tr bgcolor="#b0d0ff">
- <th align="left">
-  Copyright Assignment
- </th>
-</tr>
-</table>
-<br />
-
-  <p>Before we can accept code contributions from you, we need a
-  copyright assignment form filled out.  See <a
-  href="../contribute.html">the GCC contribute page</a> for
-  information on how to do this. You should probably CC
-  <a href="mailto:assignments@gnu.org"><tt>assignments@gnu.org</tt></a> with 
-  your request.</p>
 
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
