--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -48,6 +48,9 @@
           compiler.</li>
     </ul>
     </li>
+    <li>Inlining heuristics for C, ObjC, C++ and Java have been improved
+        significantly.  Call graph based out-of-order inlining is now
+        enabled by default at <code>-O3</code>.</li>
   </ul>
 
   
