* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -8,7 +8,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2003-07-10.
+2003-07-14.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -18,43 +18,15 @@ differences are currently required.</p>
 
 <table border="1" width="100%">
 <tr><th>Class</th> <th>libgcj</th> <th>Classpath</th> <th>Merge Status</th> </tr>
+<tr> <td>gnu.java.awt.EmbeddedWindow</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
+<tr> <td>gnu.java.awt.EmbeddedWindowSupport</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
 <tr> <td>gnu.java.awt.image.GdkPixbufDecoder</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>gnu.java.awt.image.GtkOffScreenDecoder</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>gnu.java.awt.peer.gtk.GdkFontMetrics</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GdkFontMetrics.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.awt.peer.gtk.GdkGraphics</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GdkGraphics.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.awt.peer.gtk.GtkButtonPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkButtonPeer.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.awt.peer.gtk.GtkCanvasPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkCanvasPeer.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.awt.peer.gtk.GtkCheckboxGroupPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkCheckboxGroupPeer.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.awt.peer.gtk.GtkCheckboxMenuItemPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkCheckboxMenuItemPeer.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.awt.peer.gtk.GtkCheckboxPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkCheckboxPeer.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.awt.peer.gtk.GtkChoicePeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkChoicePeer.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.awt.peer.gtk.GtkClipboard</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkClipboard.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.awt.peer.gtk.GtkFileDialogPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkFileDialogPeer.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.awt.peer.gtk.GtkFramePeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkFramePeer.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.awt.peer.gtk.GtkGenericPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkGenericPeer.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.awt.peer.gtk.GtkImage</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkImage.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.awt.peer.gtk.GtkImagePainter</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkImagePainter.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.awt.peer.gtk.GtkLabelPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkLabelPeer.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.awt.peer.gtk.GtkListPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkListPeer.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.awt.peer.gtk.GtkMenuBarPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkMenuBarPeer.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.awt.peer.gtk.GtkMenuComponentPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkMenuComponentPeer.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.awt.peer.gtk.GtkMenuItemPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkMenuItemPeer.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.awt.peer.gtk.GtkMenuPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkMenuPeer.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.awt.peer.gtk.GtkOffScreenImage</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkOffScreenImage.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.awt.peer.gtk.GtkPanelPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkPanelPeer.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.awt.peer.gtk.GtkPopupMenuPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkPopupMenuPeer.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.awt.peer.gtk.GtkScrollPanePeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkScrollPanePeer.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.awt.peer.gtk.GtkScrollbarPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkScrollbarPeer.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.awt.peer.gtk.GtkTextAreaPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkTextAreaPeer.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GtkDialogPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkDialogPeer.diff">Diff</a></td> </tr>
 <tr> <td>gnu.java.awt.peer.gtk.GtkTextComponentPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkTextComponentPeer.diff">Diff</a></td> </tr>
 <tr> <td>gnu.java.awt.peer.gtk.GtkTextFieldPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkTextFieldPeer.diff">Diff</a></td> </tr>
 <tr> <td>gnu.java.awt.peer.gtk.GtkToolkit</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkToolkit.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.locale.LocaleInformation_de</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.locale.LocaleInformation_de.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.locale.LocaleInformation_en</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.locale.LocaleInformation_en.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.locale.LocaleInformation_nl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.locale.LocaleInformation_nl.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.nio.FileChannelImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.nio.FileChannelImpl.diff">Diff</a></td> </tr>
 <tr> <td>gnu.java.nio.SelectorImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.nio.SelectorImpl.diff">Diff</a></td> </tr>
-<tr> <td>gnu.java.rmi.server.UnicastServerRef</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.rmi.server.UnicastServerRef.diff">Diff</a></td> </tr>
 <tr> <td>gnu.javax.swing.plaf.gtk.GtkBorders</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>gnu.javax.swing.plaf.gtk.GtkCheckBoxUI</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>gnu.javax.swing.plaf.gtk.GtkIconFactory</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
@@ -65,6 +37,7 @@ differences are currently required.</p>
 <tr> <td>java.awt.GridBagLayout</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.GridBagLayout.diff">Diff</a></td> </tr>
 <tr> <td>java.awt.GridBagLayoutInfo</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.awt.Toolkit</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Toolkit.diff">Diff</a></td> </tr>
+<tr> <td>java.awt.Window</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Window.diff">Diff</a></td> </tr>
 <tr> <td>java.io.File</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.File.diff">Diff</a></td> </tr>
 <tr> <td>java.io.FileDescriptor</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.io.InputStreamReader</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.InputStreamReader.diff">Diff</a></td> </tr>
@@ -102,13 +75,11 @@ differences are currently required.</p>
 <tr> <td>java.net.MimeTypeMapper</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.net.PlainDatagramSocketImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.PlainDatagramSocketImpl.diff">Diff</a></td> </tr>
 <tr> <td>java.net.PlainSocketImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.PlainSocketImpl.diff">Diff</a></td> </tr>
-<tr> <td>java.net.ServerSocket</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.ServerSocket.diff">Diff</a></td> </tr>
-<tr> <td>java.net.Socket</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.Socket.diff">Diff</a></td> </tr>
 <tr> <td>java.net.URL</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.URL.diff">Diff</a></td> </tr>
 <tr> <td>java.net.URLConnection</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.URLConnection.diff">Diff</a></td> </tr>
 <tr> <td>java.nio.DirectByteBufferImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.DirectByteBufferImpl.diff">Diff</a></td> </tr>
 <tr> <td>java.nio.MappedByteBufferImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.MappedByteBufferImpl.diff">Diff</a></td> </tr>
-<tr> <td>java.nio.channels.FileChannel</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.FileChannel.diff">Diff</a></td> </tr>
+<tr> <td>java.nio.channels.FileChannelImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.FileChannelImpl.diff">Diff</a></td> </tr>
 <tr> <td>java.text.CollationElementIterator</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.text.CollationElementIterator.diff">Diff</a></td> </tr>
 <tr> <td>java.text.CollationKey</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.text.CollationKey.diff">Diff</a></td> </tr>
 <tr> <td>java.text.Collator</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.text.Collator.diff">Diff</a></td> </tr>
@@ -134,19 +105,6 @@ differences are currently required.</p>
 <tr> <td>javax.rmi.CORBA.ObjectImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>javax.rmi.CORBA.SystemException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>javax.rmi.ORB</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>javax.swing.AbstractButton</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.AbstractButton.diff">Diff</a></td> </tr>
-<tr> <td>javax.swing.ButtonModel</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.ButtonModel.diff">Diff</a></td> </tr>
-<tr> <td>javax.swing.SwingUtilities</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.SwingUtilities.diff">Diff</a></td> </tr>
-<tr> <td>javax.swing.UIManager</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.UIManager.diff">Diff</a></td> </tr>
-<tr> <td>javax.swing.colorchooser.DefaultColorSelectionModel</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.colorchooser.DefaultColorSelectionModel.diff">Diff</a></td> </tr>
-<tr> <td>javax.swing.event.AncestorEvent</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.event.AncestorEvent.diff">Diff</a></td> </tr>
-<tr> <td>javax.swing.event.InternalFrameEvent</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.event.InternalFrameEvent.diff">Diff</a></td> </tr>
-<tr> <td>javax.swing.plaf.basic.BasicBorders</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.plaf.basic.BasicBorders.diff">Diff</a></td> </tr>
-<tr> <td>javax.swing.plaf.basic.BasicLabelUI</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.plaf.basic.BasicLabelUI.diff">Diff</a></td> </tr>
-<tr> <td>javax.swing.plaf.basic.BasicLookAndFeel</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.plaf.basic.BasicLookAndFeel.diff">Diff</a></td> </tr>
-<tr> <td>javax.swing.plaf.basic.BasicTabbedPaneUI</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.plaf.basic.BasicTabbedPaneUI.diff">Diff</a></td> </tr>
-<tr> <td>javax.swing.plaf.basic.BasicTextUI</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.plaf.basic.BasicTextUI.diff">Diff</a></td> </tr>
-<tr> <td>javax.swing.plaf.metal.MetalLookAndFeel</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.plaf.metal.MetalLookAndFeel.diff">Diff</a></td> </tr>
 <tr> <td>javax.xml.parsers.ClassStuff</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>javax.xml.parsers.DocumentBuilder</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>javax.xml.parsers.DocumentBuilderFactory</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
