Add some details on how to generate now branches.

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -400,7 +400,14 @@ done
 <h2><a name="branches">Creating branches</a></h2>
 
 <p>When creating a branch for development, you should first tag the
-branchpoint. Also, please document such branches at
+branchpoint, for example as follows:</p>
+
+<blockquote><pre>
+cvs rtag $BRANCH-branchpoint gcc
+cvs rtag -b -r $BRANCH-branchpoint $BRANCH-branch gcc
+</pre></blockquote>
+
+<p>Also, please document such branches at
 <a href="cvs.html#devbranches">cvs.html#devbranches</a>.
 </p>
 
