--- a/htdocs/projects/beginner.html
+++ b/htdocs/projects/beginner.html
@@ -578,7 +578,7 @@ cleaner and requires less gunk in the implementation.</p>
 <p>The targets with text peepholes are:</p>
 <pre>
   arm avr c4x cris dsp16xx fr30 i960 ip2k m32r m68hc11 m68k
-  mcore mips mn10200 mn10300 ns32k pa romp rs6000 sh sparc.
+  mcore mips mn10300 ns32k pa rs6000 sh sparc.
 </pre>
 </li>
 
