Update the list of targets with TARGET_ASM_FUNCTION_PROLOGUE/EPILOGUE.

--- a/htdocs/projects/beginner.html
+++ b/htdocs/projects/beginner.html
@@ -596,16 +596,16 @@ generate RTL.</p>
 <code>TARGET_ASM_FUNCTION_PROLOGUE/EPILOGUE</code> in
 <code>tm.h</code> are:</p>
 <pre>
-  arc avr dsp16xx h8300 i370 i960 m68k ns32k pdp11 romp vax
+  arc avr dsp16xx i370 i960 m68k ns32k pdp11 vax
 </pre>
 <p>Targets which only have <code>prologue</code> and <code>epilogue</code>
 named expanders are:</p>
 <pre>
-  alpha c4x fr30 m68hc11 mcore mn10200 mn10300 sh
+  alpha c4x fr30 m68hc11 mcore mn10300 sh
 </pre>
 <p>Targets which have <em>both</em> are:</p>
 <pre>
-  arm d30v i386 ia64 m32r m88k mips pa rs6000 sparc
+  arm d30v h8300 i386 ia64 m32r mips pa rs6000 sparc
 </pre>
 <p>I'd suggest starting with the targets that have both.</p>
 </li>
