Mention rm7k/rm9k support.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -138,8 +138,12 @@
     file.</li>
     
     <li>Support for <code>long long</code> added to the H8/300 port.</li>
-  </ul>
 
+    <li>Support for the RM7000 and RM9000 processors has been added to the
+    MIPS port.  It is activated by the <code>-march</code> compiler option
+    and should work with any MIPS I (<code>mips-*</code>) or MIPS III
+    (<code>mips64-*</code>) configuration.</li>
+  </ul>
 
 <h2><a name="obsolete_systems">Obsolete Systems</a></h2>
 
