Add GNU Emacs instructions

--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -57,8 +57,14 @@
         <code>&lt;varargs.h&gt;</code> header, used for writing
 	variadic functions in traditional C, still exists but will
 	produce an error message if used.</li>
-  </ul>
 
+    <li>GCC 3.3.1 automatically places zero-initialized variables in
+        the <code>.bss</code> section on some operating systems.  GNU
+        Emacs will not work correctly when using this optimization.
+        Therefore, you should use
+        <code>-fno-zero-initialized-in-bss</code> to build GNU
+        Emacs.</li>
+  </ul>
 
 <h2>General Optimizer Improvements</h2>
 
